refactor: enhance Transporte service and controller with improved response handling and exception management