@@ -3,10 +3,15 @@ package com.safeway.tech.api.controllers;
 import com.safeway.tech.api.dto.transporte.AlunoTransporteResponse;
 import com.safeway.tech.api.dto.transporte.TransporteRequest;
 import com.safeway.tech.api.dto.transporte.TransporteResponse;
+import com.safeway.tech.domain.models.Aluno;
 import com.safeway.tech.domain.models.Transporte;
+import com.safeway.tech.service.mappers.AlunoMapper;
+import com.safeway.tech.service.mappers.TransporteMapper;
 import com.safeway.tech.service.services.TransporteService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -18,7 +23,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/transporte")
@@ -27,53 +31,44 @@ public class TransporteController {
 
     private final TransporteService transporteService;
 
-    private Transporte mapToEntity(TransporteRequest req) {
-        Transporte t = new Transporte();
-        t.setPlaca(req.placa());
-        t.setModelo(req.modelo());
-        t.setCapacidade(req.capacidade());
-        return t;
-    }
-
-    private TransporteResponse mapToResponse(Transporte t) {
-        return TransporteResponse.fromEntity(t);
-    }
-
-    @PostMapping
-    public TransporteResponse salvarTransporte(@RequestBody @Valid TransporteRequest request) {
-        Transporte salvo = transporteService.salvarTransporte(mapToEntity(request));
-        return mapToResponse(salvo);
-    }
-
     @GetMapping
-    public List<TransporteResponse> listarTransportes() {
-        return transporteService.listarTransportes()
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<TransporteResponse>> listarTransportes() {
+        List<Transporte> transportes = transporteService.listarTransportes();
+        List<TransporteResponse> response = transportes.stream().map(TransporteMapper::toResponse).toList();
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
     @GetMapping("/{idTransporte}")
-    public TransporteResponse retornarUm(@PathVariable UUID idTransporte) {
-        return mapToResponse(transporteService.getById(idTransporte));
+    public ResponseEntity<TransporteResponse> retornarUm(@PathVariable UUID idTransporte) {
+        Transporte transporte = transporteService.buscarPorId(idTransporte);
+        TransporteResponse response = TransporteMapper.toResponse(transporte);
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
     @GetMapping("/{idTransporte}/alunos")
-    public List<AlunoTransporteResponse> listarAlunosDoTransporte(@PathVariable UUID idTransporte) {
-        return transporteService.listarAlunos(idTransporte)
-                .stream()
-                .map(AlunoTransporteResponse::fromEntity)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<AlunoTransporteResponse>> listarAlunosDoTransporte(@PathVariable UUID idTransporte) {
+        List<Aluno> alunoTransporte = transporteService.listarAlunos(idTransporte);
+        List<AlunoTransporteResponse> response = alunoTransporte.stream().map(AlunoMapper::toTransporteResponse).toList();
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
-    @DeleteMapping("/{idTransporte}")
-    public void excluir(@PathVariable UUID idTransporte) {
-        transporteService.excluirTransporte(idTransporte);
+    @PostMapping
+    public ResponseEntity<TransporteResponse> salvarTransporte(@RequestBody @Valid TransporteRequest request) {
+        Transporte transporte = transporteService.salvarTransporte(request);
+        TransporteResponse response = TransporteMapper.toResponse(transporte);
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @PutMapping("/{idTransporte}")
-    public TransporteResponse alterarTransporte(@RequestBody @Valid TransporteRequest novoTransporte1, @PathVariable UUID idTransporte) {
-        Transporte atualizado = transporteService.alterarTransporte(mapToEntity(novoTransporte1), idTransporte);
-        return mapToResponse(atualizado);
+    public ResponseEntity<TransporteResponse> alterarTransporte(@RequestBody @Valid TransporteRequest request, @PathVariable UUID idTransporte) {
+        Transporte transporte = transporteService.atualizarTransporte(idTransporte, request);
+        TransporteResponse response = TransporteMapper.toResponse(transporte);
+        return ResponseEntity.status(HttpStatus.OK).body(response);
+    }
+
+    @DeleteMapping("/{idTransporte}")
+    public ResponseEntity<Void> excluir(@PathVariable UUID idTransporte) {
+        transporteService.excluirTransporte(idTransporte);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 }
